crates/ignis_formatter/tests/snapshots/canonical_layout__formats_generic_calls_and_binary_arguments_ast_guided.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
function main(): void {
    Math::max<i32>(left + 1, right - 2);
}
