crates/ignis_formatter/tests/snapshots/canonical_layout__formats_generic_function_signatures_without_angle_bracket_spacing.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
function identity<T>(value: Result<T, Error>): Result<T, Error> {
  return value;
}
