crates/ignis_formatter/tests/snapshots/canonical_layout__formats_generic_record_member_and_record_initializer_type_slices_without_reordering_members.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
record ReducerBox<T> {
  public values: T[];
  public reducer: (T, &T) -> T;
}
function build<T>(values: T[], reducer: (T, &T) -> T): ReducerBox<T> {
  return ReducerBox<T> { values: values, reducer: reducer };
}
