crates/ignis_formatter/tests/snapshots/canonical_layout__formats_import_followed_by_function_with_blank_line_separator.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
import foo from "bar";

function main(): void {
  return;
}
