crates/ignis_formatter/tests/snapshots/canonical_layout__formats_lambda_with_block_body.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
function apply(fn: (i32) -> i32, x: i32): i32 {
  return fn(x);
}
