crates/ignis_formatter/tests/snapshots/canonical_layout__formats_let_else_match_lambda_and_ternary_slices_without_reordering_arms.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
function compute(input: Option<i32>): i32 {
  let Some(value) = input else {
    return 0;
  };
  return match (value) { 0 | 1 -> 1, _ if value > 10 -> ((x: i32): i32 -> x + 1)(value), _ -> value > 2 ? value : 2, };
}
