crates/ignis_formatter/tests/snapshots/canonical_layout__formats_let_else_with_binding_type.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
function test(input: Option<i32>): i32 {
  let Some(value) = input else {
    return 0;
  };
  return value;
}
