crates/ignis_formatter/tests/snapshots/canonical_layout__formats_match_expression_with_multiple_arms.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
function classify(n: i32): str {
  return match (n) { 0 -> "zero", 1 -> "one", _ -> "many", };
}
