crates/ignis_formatter/tests/snapshots/canonical_layout__formats_multiline_function_signature_with_many_parameters.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
function veryLongFunctionSignatureThatShouldBreak(
  firstArgument: i32,
  secondArgument: i32,
  thirdArgument: i32,
  fourthArgument: i32
): i32 {
  return firstArgument;
}
