crates/ignis_formatter/tests/snapshots/canonical_layout__formats_multiple_imports_with_preserved_order.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
import Alpha, Beta from "std::alpha";
import Gamma from "std::gamma";
