crates/ignis_formatter/tests/snapshots/canonical_layout__formats_nested_record_initializer_values_without_reordering_outer_fields.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
record Child {
  left: i32;
  right: i32;
}

record Parent {
  child: Child;
  count: i32;
}

function build(value: i32): Parent {
  return Parent {
    child: Child {
      left: value,
      right: value + 1,
    },
    count: 2,
  };
}
