crates/ignis_formatter/tests/snapshots/canonical_layout__formats_record_initializer_in_let_binding.snap
---
source: crates/ignis_formatter/tests/canonical_layout.rs
expression: formatted
---
record Point {
  x: i32;
  y: i32;
}
function build(x: i32, y: i32): Point {
  let p = Point { x: x, y: y };
  return p;
}
